개인정보 등록

--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+							<p>연락을 주실떄에는 아래에 입력하여 보내주세요. 답변 받으실 메일을 정확하게 써주셔야 답변 드릴 수 있습니다. </p>
+							<p>plz make sure your e-mail to get reply.</p>
 							<form method="post" action="#">
 								<div class="field">
 									<label for="name">Name</label>
@@ -153,18 +154,17 @@
 							</form>
 							<ul class="contact">
 								<li class="fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
+									현재 거주 & 활동<br/>
+									일산 파주 서울<br/>
 								</li>
-								<li class="fa-phone">(000) 000-0000</li>
-								<li class="fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="fa-facebook"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								<li class="fa-phone">+82-10-****-5672</li>
+								<li class="fa-envelope"><a href="#">jasonkim5672@gmail.com</a></li>
+								<li class="fa-twitter"><a href="twitter.com/iamkbw">twitter.com/iamkbw</a></li>
+								<li class="fa-facebook"><a href="facebook.com/Byeongwoo.J.Kim">facebook.com/Byeongwoo.J.Kim</a></li>
+								<li class="fa-instagram"><a href="instagram.com/iamkbw">instagram.com/iamkbw</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; All rights reserved by Jason</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
