--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
 									일산 파주 서울<br/>
 								</li>
 								<li class="fa-phone">+82-10-****-5672</li>
-								<li class="fa-envelope"><a href="#">jasonkim5672@gmail.com</a></li>
-								<li class="fa-twitter"><a href="twitter.com/iamkbw">twitter.com/iamkbw</a></li>
-								<li class="fa-facebook"><a href="facebook.com/Byeongwoo.J.Kim">facebook.com/Byeongwoo.J.Kim</a></li>
-								<li class="fa-instagram"><a href="instagram.com/iamkbw">instagram.com/iamkbw</a></li>
+								<li class="fa-envelope">jasonkim5672@gmail.com</li>
+								<li class="fa-twitter"><a href="http://www.twitter.com/iamkbw">twitter.com/iamkbw</a></li>
+								<li class="fa-facebook"><a href="http://facebook.com/Byeongwoo.J.Kim">facebook.com/Byeongwoo.J.Kim</a></li>
+								<li class="fa-instagram"><a href="http://instagram.com/iamkbw">instagram.com/iamkbw</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; All rights reserved by Jason</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
