--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
 								</li>
 								<li class="fa-phone">+82-10-****-5672</li>
 								<li class="fa-envelope">jasonkim5672@gmail.com</li>
-								<li class="fa-twitter"><a href="http://www.twitter.com/iamkbw">twitter.com/iamkbw</a></li>
-								<li class="fa-facebook"><a href="http://facebook.com/Byeongwoo.J.Kim">facebook.com/Byeongwoo.J.Kim</a></li>
-								<li class="fa-instagram"><a href="http://instagram.com/iamkbw">instagram.com/iamkbw</a></li>
+								<li class="fa-twitter"><a href="https://twitter.com/iamkbw">twitter.com/iamkbw</a></li>
+								<li class="fa-facebook"><a href="https://facebook.com/Byeongwoo.J.Kim">facebook.com/Byeongwoo.J.Kim</a></li>
+								<li class="fa-instagram"><a href="https://instagram.com/iamkbw">instagram.com/iamkbw</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; All rights reserved by Jason</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
