--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 							</section>
 
 						<!-- Four -->
+						<!--
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">Vitae phasellus</h2>
@@ -126,6 +127,7 @@
 									</ul>
 								</div>
 							</section>
+							--> <!--end section Four -->
 
 					</section>
 
@@ -134,7 +136,7 @@
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							<p>연락을 주실떄에는 아래에 입력하여 보내주세요. 답변 받으실 메일을 정확하게 써주셔야 답변 드릴 수 있습니다. </p>
-							<p>plz make sure your e-mail to get reply.</p>
+							<p>plz make sure your e-mail address to get reply.</p>
 							<form method="post" action="#">
 								<div class="field">
 									<label for="name">Name</label>
@@ -164,7 +166,7 @@
 								<li class="fa-instagram"><a href="https://instagram.com/iamkbw">instagram.com/iamkbw</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; All rights reserved by Jason</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; All rights reserved by Jason</li><li>Designed by HTML5 UP</li>
 							</ul>
 						</div>
 					</section>
