--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a href="generic.html"></a></li>
+								<li><a href="https://github.com/jasonkim5672">Git Hub</a></li>
+								<li><a href="#footer">Get in touch</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -59,8 +58,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">자기소개</h2>
+										<p>업데이팅...</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -71,8 +70,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">Who Jason Is</h2>
+										<p>Updating...</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -83,9 +82,9 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">What Jason Do & Did</h2>
+										<p>...</p>
+										<a href="https://github.com/jasonkim5672" class="special">Visit Jason's GitHub</a>
 									</div>
 								</div>
 							</section>
@@ -136,7 +135,7 @@
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							<p>연락을 주실떄에는 아래에 입력하여 보내주세요. 답변 받으실 메일을 정확하게 써주셔야 답변 드릴 수 있습니다. </p>
-							<p>plz make sure your e-mail address to get reply.</p>
+							<p>please make sure your e-mail address to get reply.</p>
 							<form method="post" action="#">
 								<div class="field">
 									<label for="name">Name</label>
@@ -166,7 +165,7 @@
 								<li class="fa-instagram"><a href="https://instagram.com/iamkbw">instagram.com/iamkbw</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; All rights reserved by Jason</li><li>Designed by HTML5 UP</li>
+								<li>&copy; All rights reserved by Jason Kim</li><li>Designed by HTML5 UP</li>
 							</ul>
 						</div>
 					</section>
