--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html"></a></li>
-								<li><a href="https://github.com/jasonkim5672">Git Hub</a></li>
+								<li><a href="generic.html">generic</a></li>
+								<li><a href="https://github.com/jasonkim5672">GitHub</a></li>
 								<li><a href="#footer">Get in touch</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
@@ -134,8 +134,8 @@
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
-							<p>연락을 주실떄에는 아래에 입력하여 보내주세요. 답변 받으실 메일을 정확하게 써주셔야 답변 드릴 수 있습니다. </p>
-							<p>please make sure your e-mail address to get reply.</p>
+							<p>연락을 주실떄에는 아래에 입력하여 보내주세요. 답변 받으실 메일을 정확하게 써주셔야 답변 드릴 수 있습니다.<br>
+							please make sure your e-mail address to get reply.</p>
 							<form method="post" action="#">
 								<div class="field">
 									<label for="name">Name</label>
