--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-diamond"></span></div>
 							<h2>Who Is Jason</h2>
-							<p>
+							<p>Byeongwoo Jason Kim<br>Junior Developer<br><BR>Student at SSU<BR>Student at St.giles<BR>GDG SSU<BR></p>
 						</div>
 					</section>
 
@@ -83,7 +83,7 @@
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">What Jason Do & Did</h2>
-										<p>...</p>
+										<p>Updating...</p>
 										<a href="https://github.com/jasonkim5672" class="special">Visit Jason's GitHub</a>
 									</div>
 								</div>
