--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-diamond"></span></div>
 							<h2>Who Is Jason</h2>
-							<p>Byeongwoo Jason Kim<br>Junior Developer<br><BR>Student at SSU<BR>Student at St.giles<BR>GDG SSU<BR></p>
+							<p>Byeongwoo Jason Kim<br>Junior Developer🇰🇷🇬🇧<br><BR>Student at SSU<BR>Student at St.giles<BR>GDG SSU<BR></p>
 						</div>
 					</section>
 
