--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 							<h2 class="major">Get in touch</h2>
 							<p>연락을 주실떄에는 아래에 입력하여 보내주세요. 답변 받으실 메일을 정확하게 써주셔야 답변 드릴 수 있습니다.<br>
 							please make sure your e-mail address to get reply.</p>
-							<form name="sendmail" method="post" action="sendmail.php">
+							<form name="sendmail">
 								<div class="field">
 									<label for="name">Name</label>
 									<input type="text" name="name" id="name" />
@@ -196,9 +196,33 @@ function check() {
 		form.email.focus();
 		return false;
 	}
-
-	form.submit();
+	send_mail();
+	
 }
+
+function send_mail(){
+	form = document.sendmail;
+
+	$charset = "UTF-8";
+$mail_from = trim(form.email); // 보내는 사람메일주소 
+$mail_to = "jasonkim5672@gmail.com"; // 받는사람 메일주소 
+
+$mailheaders.= "Return-Path : ". trim($_POST['form_user'])." \r\n";	//리턴되는 메일을 받는 주소
+$mailheaders.= "From : SendMailTest \r\n";
+$Headers .= "from: 폼메일 <formmail> \r\n";
+$Headers .= "Content-Type: text/html; charset=EUC-KR \r\n";
+$Name = trim(form.name);
+$Name =  "=?$charset?B?".base64_encode($Name)."?=";
+
+$subject =  "[About-Jason] ::".$Name." ::".trim(form.subject);
+$contents = form.message;
+
+mail($mail_to,$subject,$contents,$Headers,$mail_from);
+		alert('메일이 성공적으로 전송되었습니다.');
+	
+	
+}
+
 </script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/jquery.min.js"></script>
