--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 							<h2 class="major">Get in touch</h2>
 							<p>연락을 주실떄에는 아래에 입력하여 보내주세요. 답변 받으실 메일을 정확하게 써주셔야 답변 드릴 수 있습니다.<br>
 							please make sure your e-mail address to get reply.</p>
-							<form name="sendmail" method="post">
+							<form name="sendmail" method="post" action="sendmail.php">
 								<div class="field">
 									<label for="name">Name</label>
 									<input type="text" name="name" id="name" />
