--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
 		<script>
 function check() {
 	form = document.sendmail;
+	/*
 	if ( form.name.value == '' ) {
 		alert('이름을 입력해주세요.');
 		form.name.focus();
@@ -196,7 +197,10 @@ function check() {
 		form.email.focus();
 		return false;
 	}
-	form.submit();
+	
+	*/
+	alert("페이지 사정상 메일기능이 작동하지 않습니다. 죄송합니다.")
+	//form.submit();
 	
 }
 
